@@ -1,3 +1,8 @@
+2006-01-19  Thorsten Kukuk  <kukuk@suse.de>
+
+	* doc/specs/Makefile.am (spec): Add padout to fix parallel
+	build (Reported by Andreas Haumer <andreas@xss.co.at>).
+
 2006-01-15  Thorsten Kukuk  <kukuk@thkukuk.de>
 
 	* modules/pam_echo/pam_echo.c: Define HOST_NAME_MAX if not
